# mediastack

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  README.md  cdk.json  package-lock.json  package.json  stack.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
clients/cli/: README.md
clients/cli/download_widescreen_wallpapers/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
clients/cli/download_widescreen_wallpapers/src/: lib.rs  main.rs
clients/www/: .env.example  Cargo.toml  README.md  index.html
clients/www/src/: main.rs  routes.rs
clients/www/src/components/: banner.rs  footer.rs  login_form.rs  mod.rs  nav.rs  widescreen_wallpaper_modal.rs
clients/www/src/contexts/: mod.rs  widescreen_wallpapers_provider.rs
clients/www/src/hooks/: mod.rs  use_has_auth.rs
clients/www/src/pages/: four_oh_four.rs  home.rs  login.rs  mod.rs
clients/www/src/types/: mod.rs  widescreen_wallpapers.rs
lambdas/add_image_download_to_queue/: Cargo.toml  README.md
lambdas/add_image_download_to_queue/src/: main.rs  types.rs
lambdas/download_image_to_s3/: Cargo.toml
lambdas/download_image_to_s3/src/: main.rs  types.rs
lambdas/generate_presigned_url/: Cargo.toml  README.md
lambdas/generate_presigned_url/src/: main.rs
lambdas/http_get_widescreen_wallpapers/: Cargo.toml  README.md
lambdas/http_get_widescreen_wallpapers/src/: main.rs  types.rs
lambdas/http_grant_api_key/: .env.example  Cargo.toml  README.md
lambdas/http_grant_api_key/src/: main.rs  types.rs
lambdas/stream_image_to_s3/: Cargo.toml  README.md
lambdas/stream_image_to_s3/src/: main.rs
lambdas/widescreen_wallpapers/: Cargo.toml  README.md
lambdas/widescreen_wallpapers/src/: lib.rs  main.rs
lambdas/write_widescreen_wallpapers_to_dynamo/: Cargo.toml  README.md
lambdas/write_widescreen_wallpapers_to_dynamo/src/: lib.rs  main.rs
