[package]
name = "stream_image_to_s3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "stream",
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
serde = "1.0.126"
aws-config = "0.2.0"
aws-sdk-s3 = "0.2.0"
aws-sdk-sqs = "0.2.0"
futures-util = "0.3"
bytes = "1.1.0"
