[package]
name = "widescreen_wallpapers"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
serde = "1.0.126"
aws-config = "0.2.0"
aws-sdk-dynamodb = "0.2.0"
