[package]
name = "download_widescreen_wallpapers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }